--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">OpenVidu Android</string>
-    <string name="join_room">Join a Video Room</string>
-    <string name="participant">Participant</string>
+    <string name="app_name">Netra-Mitra</string>
+    <string name="join_room">Talk to Netra-Mitra</string>
+    <string name="participant">Your Name</string>
     <string name="room">Room</string>
     <string name="room_name">Test Room</string>
     <string name="joinBtn">Join!</string>
     <string name="openvidu_logo">OpenVidu logo</string>
-    <string name="openvidu_message">Made with love by <b>OpenVidu team</b></string>
+    <string name="openvidu_message">Made with love by <b>Netra-Mitra team</b></string>
     <string name="application_server_url">Application Server URL</string>
     <string name="livekit_url">LiveKit URL</string>
     <string name="configure_urls">Configure URLs</string>
